[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
petgraph = "0.6.4"
regex = "1.10.2"

util = { path = "util" }
